{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 9,
  "lineage": "2ddc81fc-b803-eba2-ca82-4210871538ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zabbix-sv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a6b2839d44d781b2",
            "arn": "arn:aws:ec2:us-east-1:996258324168:instance/i-07df4c00777f237b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07df4c00777f237b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07b8f66844f244caa",
            "private_dns": "ip-10-0-1-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-54-196-54-62.compute-1.amazonaws.com",
            "public_ip": "54.196.54.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f4484c64d462077b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a166410e08e0c744",
            "tags": {
              "Name": "zabbix-sv",
              "ambiente": "zabbix"
            },
            "tags_all": {
              "Name": "zabbix-sv",
              "ambiente": "zabbix"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8522a6496c94f92"
            ]
          },
          "dependencies": [
            "aws_security_group.zabbix-server-sg",
            "aws_subnet.zabbix-public-subnet",
            "aws_vpc.zabbix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zabbix-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996258324168:internet-gateway/igw-0eed2c623f016ca00",
            "id": "igw-0eed2c623f016ca00",
            "owner_id": "996258324168",
            "tags": {
              "Name": "zabbix-igw"
            },
            "tags_all": {
              "Name": "zabbix-igw"
            },
            "vpc_id": "vpc-00662d168a7e3d162"
          },
          "dependencies": [
            "aws_vpc.zabbix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "zabbix-rt-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eed2c623f016ca00",
            "id": "r-rtb-076a29b468f001a111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076a29b468f001a11",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.zabbix-igw",
            "aws_route_table.zabbix_rt",
            "aws_vpc.zabbix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zabbix_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996258324168:route-table/rtb-076a29b468f001a11",
            "id": "rtb-076a29b468f001a11",
            "owner_id": "996258324168",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eed2c623f016ca00",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zabbix_rt"
            },
            "tags_all": {
              "Name": "zabbix_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00662d168a7e3d162"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.zabbix-igw",
            "aws_vpc.zabbix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zabbix-pub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6e43b6bceef1078",
            "route_table_id": "rtb-076a29b468f001a11",
            "subnet_id": "subnet-0a166410e08e0c744"
          },
          "dependencies": [
            "aws_internet_gateway.zabbix-igw",
            "aws_route_table.zabbix_rt",
            "aws_subnet.zabbix-public-subnet",
            "aws_vpc.zabbix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zabbix-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996258324168:security-group/sg-0f8522a6496c94f92",
            "description": "Allow SSH and HTTP traffic on EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8522a6496c94f92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to EC2",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH to EC2",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "zabbix-server-sg",
            "name_prefix": "",
            "owner_id": "996258324168",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zabbix-server-sg"
            },
            "tags_all": {
              "Name": "zabbix-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00662d168a7e3d162"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zabbix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zabbix-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996258324168:subnet/subnet-0a166410e08e0c744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a166410e08e0c744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "996258324168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zabbix-public-subnet"
            },
            "tags_all": {
              "Name": "zabbix-public-subnet"
            },
            "vpc_id": "vpc-00662d168a7e3d162"
          },
          "dependencies": [
            "aws_vpc.zabbix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zabbix-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996258324168:vpc/vpc-00662d168a7e3d162",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0577e055df3d42bf4",
            "default_route_table_id": "rtb-02f47a94a8dfea1d5",
            "default_security_group_id": "sg-008c3e368c42e2bf2",
            "dhcp_options_id": "dopt-027eea69e99a3c6ec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00662d168a7e3d162",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f47a94a8dfea1d5",
            "owner_id": "996258324168",
            "tags": {
              "Name": "zabbix-vpc"
            },
            "tags_all": {
              "Name": "zabbix-vpc"
            }
          }
        }
      ]
    }
  ]
}